--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "2a942970-de7f-4abe-ab45-dd4199b540b8"
 authors = ["Thomas Poulsen"]
 version = "1.0.0-DEV"
 
+[deps]
+ImageShow = "4e3cecfd-b093-5904-9786-8bbb286a6a31"
+ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+
 [compat]
 julia = "1.6.7"
 
