--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 
 [compat]
+Images = "0.26"
 julia = "1.6.7"
 
 [extras]
