--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,9 @@ authors = ["Thomas Poulsen"]
 version = "1.0.0-DEV"
 
 [deps]
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+ImageDraw = "4381153b-2b60-58ae-a1ba-fd683676385f"
+ImageIO = "82e4d734-157c-48bb-816b-45c225c6df19"
 ImageShow = "4e3cecfd-b093-5904-9786-8bbb286a6a31"
 ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
